Add product catalog module with initial product offerings and retrieval functions
- Created `product_catalog` module with a `Product` dataclass to represent banking products.
- Defined a `PRODUCT_CATALOG` dictionary containing various product offerings targeting different customer clusters.
- Implemented `get_product` function to retrieve a product by its key.
- Added `get_products_for_cluster` function to fetch products targeting a specific customer cluster.
- Included validation in the `Product` class to ensure data integrity upon initialization.

--- a/notebooks/data_integration.ipynb
+++ b/notebooks/data_integration.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "    # Define Bimodal Peaks\n",
     "    mu_low, sigma_low = 0.22, 0.07\n",
-    "    mu_high, sigma_high = 0.72, 0.1 \n",
+    "    mu_high, sigma_high = 0.72, 0.1\n",
     "\n",
     "    # Base Propensity\n",
     "    prob_enthusiast = 0.54 \n",
@@ -206,7 +206,7 @@
     "       'has_loan', 'loan_type', 'loan_amount_usd',\n",
     "       'loan_term_months', 'monthly_emi_usd', 'loan_interest_rate_pct',\n",
     "       'debt_to_income_ratio', 'credit_score', 'savings_to_income_ratio',\n",
-    "       'region', 'record_date', 'age_bucket',\n",
+    "       'region', 'record_date',\n",
     "       'responsiveness']\n",
     "\n",
     "df_final = df_final[final_cols]"
